# lupus-backend

./: Cargo.toml  README.md  test.db
migrations/2022-06-27-212856_create_users/: up.sql
src/: db.rs  main.rs  schema.rs
src/models/: response.rs  user.rs
src/routes/: imap.rs  index.rs  mod.rs
src/tests/: index.rs  mod.rs
src/utils/: imap.rs
