[package]
name = "lupus-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
serde = { version = "1.0.137", features = ["derive"] }
dotenv = "0.15.0"
postgres = "0.19.3"
imap = "3.0.0-alpha.7"
native-tls = "0.2.10"
