[package]
name = "lupus-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
serde = { version = "1.0.137", features = ["derive"] }
imap = { version = "3.0.0-alpha.7", default-features = false, features = ["rustls-tls"] }
rustls-connector = "0.16.1"
